# simd_linalg

./: Cargo.toml  Makefile  README.md  build.rs
benches/: dot.rs  matmul.rs  opt.rs
src/: blis.rs  lib.rs  matmul.rs  matrix.rs  vector.rs
src/ffi/: mkl.rs  mod.rs
src/matmul/: blis.rs  block.rs  matrixmultiply.rs  mkl.rs  mod.rs
tests/: matmul.rs
