[package]
name = "simd_linalg"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[features]
alloc = []
std = ["alloc"]
default = ["std", "mm", "blis"]
mm = ["matrixmultiply"]
blis = ["blas", "blas-src"]

[dependencies]
packed_simd = { version = "*", package = "packed_simd_2" }
matrixmultiply = { git = "https://github.com/bluss/matrixmultiply", optional=true }
blas-src = { version = "0.7", features = ["blis"], optional=true }
blas = { version = "*", optional=true }

[dev-dependencies]
rand = "*"
